--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseConfiguration": {
+    "ConnectionString" : "mongodb://localhost:27017",
+    "DatabaseName" : "E-Commerce",
+    "CustomersCollection" : "Customers",
+    "OrdersCollection" : "Orders",
+    "ProductsCollection" : "Products",
+    "CartsCollection" : "Carts",
+    "CategoriesCollection" : "Categories",
+    "ImagesCollection" : "Images"
+  }
 }
