--- a/E-Commerce.Api.csproj
+++ b/E-Commerce.Api.csproj
@@ -8,12 +8,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
         <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers" />
+      <Folder Include="wwwroot\Images" />
+      <Folder Include="wwwroot\UploadedImages" />
     </ItemGroup>
 
 </Project>
