added identity, register and login

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,9 @@
     "CartsCollection" : "Carts",
     "CategoriesCollection" : "Categories",
     "ImagesCollection" : "Images"
+  },
+  "JwtConfiguration" : {
+    "SecretKey" : "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM",
+    "ValidIssuer": "https://localhost:7020"
   }
 }
