--- a/E-Commerce.Api.csproj
+++ b/E-Commerce.Api.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
         <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
